# vortex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aggregate_generate_udl.cpp  build.sh  centroids_search_udl.cpp  client_query.py  clusters_search_udl.cpp  grouped_embeddings.hpp  grouped_embeddings_for_search.hpp  perf_config.py.in  perf_test_client.py  perf_test_setup.py  python_udl.cpp  rag_utils.hpp  requirements.txt  setup.py  test_py.py  utils.hpp
Python_Script/: test_gpu.py
benchmark/: benchmark_client.cpp  benchmark_client.hpp  benchmark_dataset.cpp  benchmark_dataset.hpp  latency_client.cpp  run_benchmark.cpp  vortex_client.cpp  vortex_client.hpp
benchmark/perf_data/: README.md  balanced_ann.py  build_balanced_gpann.py  download_gist.sh  download_hotpot.sh  faiss_knn.py  format_gist.py  gist_process_utils.py
benchmark/setup/: object_pools.list  perf_test_setup.py
cfg/: clear_log.sh.tmp  dfgs.json.tmp  layout.json.tmp  run.sh.tmp  udl_dlls.cfg.tmp
cfg/n0/: derecho.cfg
cfg/n1/: derecho.cfg
cfg/n2/: derecho.cfg
cfg/n3/: derecho.cfg
cfg/n4/: derecho.cfg
dataset/: embed.py  embed_chunk_test.py  msmarco_download.py
dataset/miniset/: passage_retrieve.py
micro_benchmark/dataset/: download_testset.sh  utils.py
perf_test/: latency_client.py  perf_config.py  perf_config.py.in  perf_test_client.py  perf_test_setup.py
python_udls/: aggregate_generate.py  encode_centroids_search.py  flush.py  logging_tags.py.in
scripts/: install-curl.sh  install-faiss.sh  install-hnswlib.sh
setup/: object_pools.list  perf_test_setup.py  perf_test_setup_gist.py  util.py
setup/perf_data/: download_gist.sh  download_hotpot.sh  download_miniset.sh  format_gist.py
vortex_client/: latency_client.cpp  recall_client.cpp
vortex_udls/: aggregate_generate_udl.cpp  aggregate_generate_udl.hpp  api_utils.cpp  api_utils.hpp  centroids_search_udl.cpp  centroids_search_udl.hpp  clusters_search_udl.cpp  clusters_search_udl.hpp  grouped_embeddings_for_search.cpp  grouped_embeddings_for_search.hpp  rag_utils.cpp  rag_utils.hpp  search_worker.hpp  serialize_utils.cpp  serialize_utils.hpp
webservice/: cascade_client.cpp  cascade_client.hpp  start_webservice.cpp  vortex_webservice.cpp  vortex_webservice.hpp  webservice.cpp  webservice.hpp
